--- a/assignment-table.css
+++ b/assignment-table.css
@@ -1,3 +1,6 @@
+*{
+  font-size: 20px;
+}
 .details{
     display: flex;
     flex-direction: column;
@@ -7,7 +10,7 @@ table, td, th {
   border: 1px solid black;
 }
 th{
-    background-color: grey;
+    background-color: rgb(192, 192, 192);
 }
 
 table {
@@ -16,8 +19,9 @@ table {
   margin: 0 auto;
 }
 
-td {
+td ,th{
   text-align: center;
+  padding: 2%;
 }
         
         
